# routes/api.php
@@ -21,4 +21,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::apiResource('v1/products', App\Http\Controllers\Api\V1\ProductController::class);
 Route::apiResource('v1/orders', App\Http\Controllers\Api\V1\OrderController::class);
 
-Route::post('v1/token', App\Http\Controllers\Api\V1\UserTokenController::class);
+Route::post('sanctum/token', App\Http\Controllers\UserTokenController::class);
